# egs-backend/src/auth/dto/auth.dto.ts
@@ -1,0 +1,15 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail, IsNotEmpty, IsString } from 'class-validator';
+
+export class LoginRequest {
+  @ApiProperty({ example: 'admin@example.com' })
+  @IsEmail()
+  @IsString()
+  @IsNotEmpty()
+  email: string;
+
+  @ApiProperty({ example: 'adminpassword' })
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+}
